--- a/app/src/main/res/layout/fragment_weight.xml
+++ b/app/src/main/res/layout/fragment_weight.xml
@@ -102,7 +102,7 @@
 
                 <EditText
                     style="@style/hint1"
-                    android:id="@+id/weightTint"
+                    android:id="@+id/getWeight"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/weightImage"
@@ -177,6 +177,7 @@
 
                 <TextView
                     style="@style/diagramsDigitsStyle"
+                    android:id="@+id/weekDiagramText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="@id/progressBarWeightWeek"
@@ -285,6 +286,7 @@
 
                 <TextView
                     style="@style/diagramsDigitsStyle"
+                    android:id="@+id/monthDiagramText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="@id/progressBarWeightMonth"
@@ -369,6 +371,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/averageWeightForMonth"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/weightImageSmall"
@@ -376,7 +379,7 @@
                     app:layout_constraintEnd_toEndOf="@id/weightImageSmall"
                     app:layout_constraintBottom_toBottomOf="@id/weightImageSmall"
                     android:layout_marginStart="10dp"
-                    android:text="xxx"
+                    android:text="0000"
                     android:background="@android:color/transparent"
                     />
 
@@ -433,6 +436,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/heightInWeight"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/heightBoxImage"
@@ -494,6 +498,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/neckneck"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/neckBox"
@@ -501,7 +506,7 @@
                     app:layout_constraintEnd_toEndOf="@id/neckBox"
                     app:layout_constraintBottom_toBottomOf="@id/neckBox"
                     android:layout_marginStart="10dp"
-                    android:text="xxx"
+                    android:text=""
                     android:background="@android:color/transparent"
                     />
 
@@ -555,6 +560,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/waistwaist"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/waistBox"
@@ -562,7 +568,7 @@
                     app:layout_constraintEnd_toEndOf="@id/waistBox"
                     app:layout_constraintBottom_toBottomOf="@id/waistBox"
                     android:layout_marginStart="10dp"
-                    android:text="xxx"
+                    android:text=""
                     android:background="@android:color/transparent"
                     />
 
@@ -615,6 +621,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/forearmforearm"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/forearmBox"
@@ -622,7 +629,7 @@
                     app:layout_constraintEnd_toEndOf="@id/forearmBox"
                     app:layout_constraintBottom_toBottomOf="@id/forearmBox"
                     android:layout_marginStart="10dp"
-                    android:text="xxx"
+                    android:text=""
                     android:background="@android:color/transparent"
                     />
 
@@ -675,6 +682,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/wristwrist"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/wristBox"
@@ -682,7 +690,7 @@
                     app:layout_constraintEnd_toEndOf="@id/wristBox"
                     app:layout_constraintBottom_toBottomOf="@id/wristBox"
                     android:layout_marginStart="10dp"
-                    android:text="xxx"
+                    android:text=""
                     android:background="@android:color/transparent"
                     />
 
@@ -735,6 +743,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/hipships"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/hipsBox"
@@ -742,7 +751,7 @@
                     app:layout_constraintEnd_toEndOf="@id/hipsBox"
                     app:layout_constraintBottom_toBottomOf="@id/hipsBox"
                     android:layout_marginStart="10dp"
-                    android:text="xxx"
+                    android:text=""
                     android:background="@android:color/transparent"
                     />
 
@@ -795,6 +804,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/hiphip1"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/hipBox"
@@ -802,7 +812,7 @@
                     app:layout_constraintEnd_toEndOf="@id/hipBox"
                     app:layout_constraintBottom_toBottomOf="@id/hipBox"
                     android:layout_marginStart="10dp"
-                    android:text="xxx"
+                    android:text=""
                     android:background="@android:color/transparent"
                     />
 
@@ -855,6 +865,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/hiphip2"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/Hip2Box"
@@ -862,7 +873,7 @@
                     app:layout_constraintEnd_toEndOf="@id/Hip2Box"
                     app:layout_constraintBottom_toBottomOf="@id/Hip2Box"
                     android:layout_marginStart="10dp"
-                    android:text="xxx"
+                    android:text=""
                     android:background="@android:color/transparent"
                     />
 
@@ -915,6 +926,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/shinshin"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/shinBox"
@@ -922,7 +934,7 @@
                     app:layout_constraintEnd_toEndOf="@id/shinBox"
                     app:layout_constraintBottom_toBottomOf="@id/shinBox"
                     android:layout_marginStart="10dp"
-                    android:text="xxx"
+                    android:text=""
                     android:background="@android:color/transparent"
                     />
 
@@ -975,6 +987,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/percentMass"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/fatBox"
@@ -1024,6 +1037,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/massIndex"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/indexMassBox"
