--- a/app/src/main/res/layout/fragment_medicines_edit.xml
+++ b/app/src/main/res/layout/fragment_medicines_edit.xml
@@ -351,7 +351,7 @@
 
                 <ProgressBar
                     style="?android:attr/progressBarStyleHorizontal"
-                    android:id="@+id/progressBarSteps"
+                    android:id="@+id/progressBarMedicines"
                     android:layout_width="105dp"
                     android:layout_height="105dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -371,10 +371,10 @@
                     android:id="@+id/currentDay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/progressBarSteps"
-                    app:layout_constraintEnd_toEndOf="@id/progressBarSteps"
-                    app:layout_constraintBottom_toBottomOf="@id/progressBarSteps"
-                    app:layout_constraintTop_toTopOf="@id/progressBarSteps"
+                    app:layout_constraintStart_toStartOf="@id/progressBarMedicines"
+                    app:layout_constraintEnd_toEndOf="@id/progressBarMedicines"
+                    app:layout_constraintBottom_toBottomOf="@id/progressBarMedicines"
+                    app:layout_constraintTop_toTopOf="@id/progressBarMedicines"
                     android:text="1"
                     app:layout_constraintVertical_bias="0.35"
                     />
@@ -383,10 +383,10 @@
                     style="@style/diagramsTextStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/progressBarSteps"
-                    app:layout_constraintEnd_toEndOf="@id/progressBarSteps"
-                    app:layout_constraintBottom_toBottomOf="@id/progressBarSteps"
-                    app:layout_constraintTop_toTopOf="@id/progressBarSteps"
+                    app:layout_constraintStart_toStartOf="@id/progressBarMedicines"
+                    app:layout_constraintEnd_toEndOf="@id/progressBarMedicines"
+                    app:layout_constraintBottom_toBottomOf="@id/progressBarMedicines"
+                    app:layout_constraintTop_toTopOf="@id/progressBarMedicines"
                     app:layout_constraintVertical_bias="0.55"
                     android:text="@string/_day"
                     />
@@ -396,10 +396,10 @@
                     android:id="@+id/totalDays"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/progressBarSteps"
-                    app:layout_constraintEnd_toEndOf="@id/progressBarSteps"
-                    app:layout_constraintBottom_toBottomOf="@id/progressBarSteps"
-                    app:layout_constraintTop_toTopOf="@id/progressBarSteps"
+                    app:layout_constraintStart_toStartOf="@id/progressBarMedicines"
+                    app:layout_constraintEnd_toEndOf="@id/progressBarMedicines"
+                    app:layout_constraintBottom_toBottomOf="@id/progressBarMedicines"
+                    app:layout_constraintTop_toTopOf="@id/progressBarMedicines"
                     app:layout_constraintVertical_bias="0.72"
                     android:text="из ?"
                     />
