--- a/app/src/main/res/layout/fragment_medicines.xml
+++ b/app/src/main/res/layout/fragment_medicines.xml
@@ -92,8 +92,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="80dp"
-
+                android:layoutAnimation="@anim/recycler_view_layout_animation"
                 />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
