--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -349,7 +349,11 @@
         android:id="@+id/startFragment5"
         android:name="com.example.healthcheck.view.StartFragment5"
         android:label="fragment_start_5"
-        tools:layout="@layout/fragment_start_5" />
+        tools:layout="@layout/fragment_start_5" >
+        <action
+            android:id="@+id/action_startFragment5_to_startFragment6"
+            app:destination="@id/startFragment6" />
+    </fragment>
     <fragment
         android:id="@+id/editMedicineFragment"
         android:name="com.example.healthcheck.view.editMedicineFragment"
@@ -403,4 +407,9 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
+    <fragment
+        android:id="@+id/startFragment6"
+        android:name="com.example.healthcheck.view.StartFragment6"
+        android:label="fragment_start_6"
+        tools:layout="@layout/fragment_start_6" />
 </navigation>
