--- a/app/src/main/res/layout/medicines_item.xml
+++ b/app/src/main/res/layout/medicines_item.xml
@@ -69,6 +69,7 @@
 
         <TextView
             style="@style/hint1"
+            android:id="@+id/dayText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
