--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="textcolor_blue">#A9B7FF</color>
     <color name="textcolor_choosen">#FFFFFF</color>
     <color name="textcolor_unchoosen">#000000</color>
+    <color name="textcolor_done">#24B600</color>
 
     <color name="status_bar_color">#A9B7FF</color>
     <color name="navigation_bar_color">#83B0FA</color>
