--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -50,43 +50,21 @@
                 android:id="@+id/profileText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/wentBack"
-                app:layout_constraintEnd_toStartOf="@id/confirm"
+                app:layout_constraintStart_toStartOf="@id/margin_main1"
+                app:layout_constraintEnd_toEndOf="@id/margin_main2"
                 app:layout_constraintTop_toTopOf="@id/wentBack"
                 app:layout_constraintBottom_toBottomOf="@id/wentBack"
                 android:text="@string/profile"
                 />
 
-            <ImageButton
-                android:id="@+id/confirm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="@id/margin_main2"
-                app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/confirm"
-                android:background="@android:color/transparent"
-                android:layout_marginTop="30dp"
-                />
-
-            <ImageView
-                android:id="@+id/profileImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="100dp"
-                android:src="@drawable/profile_image_big"
-                android:background="@android:color/transparent"
-                />
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/nameBox"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 app:layout_constraintStart_toStartOf="@id/margin_main1"
                 app:layout_constraintEnd_toEndOf="@id/margin_main2"
-                app:layout_constraintTop_toBottomOf="@id/profileImage"
-                android:layout_marginTop="26dp">
+                app:layout_constraintTop_toBottomOf="@id/profileText"
+                android:layout_marginTop="40dp">
 
                 <ImageView
                     android:id="@+id/nameImage"
@@ -110,6 +88,7 @@
                     app:layout_constraintEnd_toEndOf="@id/nameImage"
                     android:hint="@string/name"
                     android:background="@android:color/transparent"
+                    android:inputType="textCapSentences"
                     android:paddingStart="15dp"
                     />
 
@@ -145,6 +124,7 @@
                     app:layout_constraintBottom_toBottomOf="@id/ageImage"
                     app:layout_constraintEnd_toEndOf="@id/ageImage"
                     android:hint="@string/age"
+                    android:inputType="number"
                     android:background="@android:color/transparent"
                     android:paddingStart="15dp"
                     />
@@ -183,6 +163,7 @@
                     app:layout_constraintBottom_toBottomOf="@id/heightImage"
                     app:layout_constraintEnd_toEndOf="@id/heightImage"
                     android:hint="@string/height"
+                    android:inputType="number"
                     android:background="@android:color/transparent"
                     android:paddingStart="15dp"
                     />
@@ -221,6 +202,7 @@
                     app:layout_constraintBottom_toBottomOf="@id/weightImage"
                     app:layout_constraintEnd_toEndOf="@id/weightImage"
                     android:hint="@string/weight"
+                    android:inputType="number"
                     android:background="@android:color/transparent"
                     android:paddingStart="15dp"
                     />
@@ -230,5 +212,42 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/confirm_box"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        >
+
+        <ImageView
+            android:id="@+id/confirm"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/button"
+            />
+
+        <TextView
+            style="@style/zagalovok1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/confirm"
+            app:layout_constraintTop_toTopOf="@id/confirm"
+            app:layout_constraintStart_toStartOf="@id/confirm"
+            app:layout_constraintEnd_toEndOf="@id/confirm"
+            android:text="@string/save"
+            android:textColor="@color/white"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
