--- a/app/src/main/res/layout/fragment_sleep.xml
+++ b/app/src/main/res/layout/fragment_sleep.xml
@@ -343,6 +343,7 @@
 
                 <TextView
                     style="@style/zagalovok2"
+                    android:id="@+id/weeek"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/week"
