--- a/app/src/main/res/layout/fragment_start_4.xml
+++ b/app/src/main/res/layout/fragment_start_4.xml
@@ -88,6 +88,7 @@
                     android:hint="Введите ваше имя"
                     android:background="@android:color/transparent"
                     android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
                     android:inputType="textCapSentences"
                     />
 
