--- a/app/src/main/res/layout/fragment_main_1.xml
+++ b/app/src/main/res/layout/fragment_main_1.xml
@@ -250,8 +250,9 @@
             android:progressDrawable="@drawable/circle_progress"
             android:indeterminate="false"
             android:max="100"
-            android:progress="1"
+            android:progress="50"
             app:layout_constraintVertical_bias="0.7"
+            android:rotation="90"
             />
 
         <TextView
