--- a/app/src/main/res/layout/fragment_weight.xml
+++ b/app/src/main/res/layout/fragment_weight.xml
@@ -176,6 +176,7 @@
                     android:max="100"
                     android:progress="1"
                     app:layout_constraintVertical_bias="0.6"
+                    android:rotation="90"
                     />
 
                 <TextView
@@ -285,6 +286,7 @@
                     android:max="100"
                     android:progress="1"
                     app:layout_constraintVertical_bias="0.6"
+                    android:rotation="90"
                     />
 
                 <TextView
