--- a/app/src/main/res/layout/fragment_weight.xml
+++ b/app/src/main/res/layout/fragment_weight.xml
@@ -384,7 +384,7 @@
                     app:layout_constraintEnd_toEndOf="@id/weightImageSmall"
                     app:layout_constraintBottom_toBottomOf="@id/weightImageSmall"
                     android:layout_marginStart="10dp"
-                    android:text="0000"
+                    android:text=""
                     android:background="@android:color/transparent"
                     android:clickable="false"
                     android:focusable="false"
@@ -451,7 +451,7 @@
                     app:layout_constraintEnd_toEndOf="@id/heightBoxImage"
                     app:layout_constraintBottom_toBottomOf="@id/heightBoxImage"
                     android:layout_marginStart="10dp"
-                    android:text="xxx"
+                    android:text=""
                     android:background="@android:color/transparent"
                     android:clickable="false"
                     android:focusable="false"
@@ -1028,7 +1028,7 @@
                     app:layout_constraintTop_toTopOf="@id/fatBox"
                     app:layout_constraintBottom_toBottomOf="@id/fatBox"
                     android:background="@android:color/transparent"
-                    android:text="XX%"
+                    android:text=""
                     android:layout_marginStart='10dp'
                     android:clickable="false"
                     android:focusable="false"
@@ -1080,7 +1080,7 @@
                     app:layout_constraintTop_toTopOf="@id/indexMassBox"
                     app:layout_constraintBottom_toBottomOf="@id/indexMassBox"
                     android:background="@android:color/transparent"
-                    android:text="XXX"
+                    android:text=""
                     android:layout_marginStart='10dp'
                     android:clickable="false"
                     android:focusable="false"
