--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -94,7 +94,7 @@
                     app:layout_constraintStart_toStartOf="@id/statusBox"
                     app:layout_constraintTop_toTopOf="@id/statusBox"
                     app:layout_constraintBottom_toBottomOf="@id/statusBox"
-                    android:text="Пока нет действий"
+                    android:text="@string/no_nearest_act"
                     android:layout_marginStart="15dp"
                     />
 
